fixed header nav z-index

--- a/src/components/HeaderNav/HeaderNav.css
+++ b/src/components/HeaderNav/HeaderNav.css
@@ -4,4 +4,5 @@
     width:100vw;
     margin:0;
     padding:0;
+    z-index: 999;
 }
